初期設定画面

--- a/ShibugakiViewer/Views/Pages/SearchPage.xaml
+++ b/ShibugakiViewer/Views/Pages/SearchPage.xaml
@@ -411,8 +411,7 @@
                     Command="{Binding StartSearchCommand}"
                     Style="{StaticResource informationPaneButtonStyle}"
                     HorizontalAlignment="Stretch"
-                    VerticalAlignment="Stretch"
-                    ToolTip="{x:Static properties:Resources.Search}">
+                    VerticalAlignment="Stretch">
 
                     <cc:LabeledIcon
                         HorizontalAlignment="Center"
